--- a/frontend/categorize_images.html
+++ b/frontend/categorize_images.html
@@ -460,24 +460,24 @@
                 return checkedRadio ? checkedRadio.value : null;
             };
 
-            // Helper to get selected radio button value, returning null if none selected
+
             const getRadioValue = (name) => {
                 const checkedRadio = document.querySelector(`input[name="${name}"]:checked`);
                 return checkedRadio ? Number(checkedRadio.value) : null;
             };
 
-            // Helper to get select value, returning null if empty
+
             const getSelectValue = (id) => {
                 const selectElement = document.getElementById(id);
                 return selectElement.value !== '' ? selectElement.value : null;
             };
 
-            // Validate required fields before submission
+
             if (!doctorNameInput.value) {
                 messageContainer.textContent = 'Please select a Doctor.';
                 return;
             }
-            if (getRadioStringValue('real_generated') === null) { // Use getRadioStringValue here
+            if (getRadioStringValue('real_generated') === null) { 
                 messageContainer.textContent = 'Please select "Real vs Generated".';
                 return;
             }
@@ -502,16 +502,13 @@
                 doctor_name: doctorNameInput.value,
                 comments: commentsInput.value,
                 mask_comments: maskCommentsInput.value,
-                //category: categorySelect.value,
-                real_generated: getRadioStringValue('real_generated'), // Now a number (1 or 2)
+                real_generated: getRadioStringValue('real_generated'), 
                 realism_rating: getRadioValue('realism_rating'),
                 mask_rating: getRadioValue('mask_rating'), // New field
                 image_precision: getSelectValue('image_precision'),
                 confidence_level: getRadioValue('confidence_level'),
-                // Removed: disease_name, skin_color_precision, crop_quality_rating, crop_diagnosis, fitzpatrick_scale
-                // Image paths are handled by the backend based on base_name, not sent in payload for this endpoint
             };
-            console.log(JSON.stringify(payload, null, 2)); // Pretty print payload for debugging
+            console.log(JSON.stringify(payload, null, 2));
 
             fetch(`${backendUrl}/skin_disease_image/update/${encodeURIComponent(baseName)}`, {
                 method: 'POST',
@@ -520,7 +517,6 @@
             })
             .then(res => {
                 if (!res.ok) {
-                    // Attempt to read error message from backend
                     return res.json().then(err => { throw new Error(err.detail || `HTTP error! status: ${res.status}`); });
                 }
                 return res.json();
