--- a/frontend/download_skin_disease_excel_classify_skin_tone.html
+++ b/frontend/download_skin_disease_excel_classify_skin_tone.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Download Skin Disease Excel</title>
+    <title>Download SKin Tone Classification Data in  Excel File</title>
     <style>
         body {
             font-family: Arial, sans-serif;
@@ -45,9 +45,8 @@
     <script>
         document.getElementById('download-btn').addEventListener('click', async () => {
             try {
-                // Fetch JSON data from the backend
-                // Ensure this URL matches your FastAPI server and endpoint name
-                const response = await fetch('https://medicalimages.apice.unibo.it/get_skin_disease_data/'); // const response = await fetch('https://192.168.15.7:8000/get_skin_disease_data/');
+
+                const response = await fetch('https://medicalimages.apice.unibo.it/get_skin_disease_data/'); 
                 
                 if (!response.ok) {
                     const errorText = await response.text();
@@ -78,10 +77,9 @@
                 // Create a temporary URL for the blob
                 const url = window.URL.createObjectURL(blob);
 
-                // Create a hidden <a> tag and trigger a click to download
                 const a = document.createElement('a');
                 a.href = url;
-                a.download = "skin_disease_images.xlsx"; // Desired filename for download
+                a.download = "skin_disease_data.xlsx"; 
                 document.body.appendChild(a);
                 a.click();
                 a.remove();
